Fix first subsection alignment in Splash page

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -2,7 +2,7 @@
 
     .splashImage {
         width: 100%;
-        height: 85vh;
+        height: 90vh;
         position: relative;
         background: image-url('background.jpg') no-repeat center center/cover;
 
@@ -74,8 +74,8 @@
         }
 
         #firstSubsectionContainer {
-            margin: 100px 0 0 0;
-            border-top: none;
+            margin: 20vh 0 0 0;
+            // border-top: none;
         }
 
         .fourthSubsectionContainer {
